# moneybird-api-python-client

./: .cookiecutter.json  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
src/moneybird/: __init__.py  __main__.py  client.py  requests.py  responses.py
src/moneybird/requests/: contacts.py
src/moneybird/responses/: __init__.py  contacts.py
tests/: __init__.py  test_administrations.py  test_contacts.py  test_main.py
